c4prj1_deck/grade.txt
Grading at Sun Mar  7 21:18:12 UTC 2021
Compiling deck.c -> deck.o
deck.c: In function ‘build_remaining_deck’:
deck.c:39:14: error: unused variable ‘build’ [-Werror=unused-variable]
     deck_t * build = make_deck_exclude(hands[j]);
              ^
deck.c:41:40: error: ‘build’ undeclared (first use in this function)
    deck_t * remain = make_deck_exclude(build); 
                                        ^
deck.c:41:40: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
